got the style setup

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>404 | RangerRhino23</title>
+    <title>404 | PyBlog</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <style>
       body {
