--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home | RangerRhino23</title>
+    <title>Home | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <script>
@@ -25,29 +25,16 @@
             margin: auto;
             font-size: larger;
         }
-
-        body {
-          background-color: tan;
-          background-image: linear-gradient(tan 0%, black 35%);
-          color: white;
-          font-family: 'Verdana', sans-serif;
-          text-align: center;
-        }
     </style>
   </head>
   <header>
     <ul class="menu">
       <li><img id="enter-hunt" style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png" alt="Clickable Image"></li>
       <li><a href="#">Home</a></li>
-      <li><a href="#about-myself">About Myself</a></li>
-      <li><a href="#programming-life">Programming Life</a></li>
-      <li><a href="#contact-me">Contact Me</a></li>
-      <li><a href="portfolio">Portfolio</a></li>
-      <li><a href="games">Games</a></li>
   </ul>
   </header>
   <body>
-    <h1>RangerRhino23</h1>
+    <h1>PyBlog</h1>
 
     <!--ABOUT MYSELF-->
     <h2 id="about-myself">About Myself</h2>
