--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redirecting... | RangerRhino23</title>
+    <title>Redirecting... | PyBlog</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <style>
       .img-preset {
