--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
       }
 
       .blog-img {
-        width: 350px;
-        height: 350px;
+        width: 200px;
+        height: 200px;
         border-radius: 5px;
         object-fit: cover;
       }
@@ -59,7 +59,15 @@
 
     <!-- Blog Template -->
     <h3 id="blog-template">Blog Template</h3>
-    <div class="paragraph">
+    <div class="blog-link">
+      <img id="blog-template-click" src="icon.png" class="blog-img">
+      <p><b>
+        Test Blog Template
+      </b></p>
+    </div>
+    <!-- Blog Template -->
+    <h3 id="blog-template">Blog Template</h3>
+    <div class="blog-link">
       <img id="blog-template-click" src="icon.png" class="blog-img">
       <p><b>
         Test Blog Template
