--- a/home.html
+++ b/home.html
@@ -33,12 +33,10 @@
       <li><a href="#">Home</a></li>
       <li><a href="#about-pyblog">About PyBlog</a></li>
       <li><a href="authors">Authors</a></li>
-      <li><a href="blogs/blog-template">Blog Template</a></li>
   </ul>
   </header>
   <body>
-    <h1>PyBlog</h1>
-
+    <br><br><br>
     <img src="icon.png" class="img-preset"/>
 
     <!-- About PyBlog -->
@@ -52,9 +50,9 @@
     <hr size="7" width="550" style="border-radius: 5px;" color="#333333">
 
     <!-- Blog Template -->
-    <h3 id="test-blog">Test Blog</h3>
+    <h2>Python: Into the World of Python</h2>
     <div class="blog-link">
-      <a href="blogs/test-blog.html"><img src="icon.png" class="blog-img"></a>
+      <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
       <p><b>
         Simple blog showing potential blogs!
       </b></p>
