--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
     <div class="blog-link">
       <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
       <p><b>
-        Simple blog showing potential blogs!
+        A blog about what Python is!
       </b></p>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
