updated website files

--- a/home.html
+++ b/home.html
@@ -13,17 +13,42 @@
       }
 
       .blog-img {
-        width: 200px;
-        height: 200px;
+        width: auto;
+        height: 100px;
         border-radius: 5px;
         object-fit: cover;
       }
 
       p {
-            color: whitesmoke;
+            color: white;
             width: 500px;
             margin: auto;
             font-size: larger;
+        }
+
+        .grid-container {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+        }
+
+        .grid-container {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          grid-gap: 20px;
+        }
+
+        .grid-item {
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 5px;
+          box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+        }
+
+        .grid-item p {
+          color: black;
+          width: 500px;
+          margin: auto;
+          font-size: larger;
         }
     </style>
   </head>
@@ -48,6 +73,28 @@
       </b></p>
     </div>
     <hr size="7" width="550" style="border-radius: 5px;" color="#333333">
+
+    <!-- Blog Grid -->
+    <div class="grid-container">
+      <div class="grid-item">
+        <a href="blogs/Python-Introduction"><img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img"></a>
+        <p><b>
+          What is Python?
+        </b></p>
+      </div>
+      <div class="grid-item">
+        <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
+        <p><b>
+          A blog about what Python is!
+        </b></p>
+      </div>
+      <div class="grid-item">
+        <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
+        <p><b>
+          A blog about what Python is!
+        </b></p>
+      </div>
+    </div>
 
     <!-- Blog Template -->
     <h2>Python: Into the World of Python</h2>
