--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
       <li><a href="#">Home</a></li>
       <li><a href="#about-pyblog">About PyBlog</a></li>
-      <li><a href="authors">Authors</a></li>
+      <li><a href="about-authors">Authors</a></li>
   </ul>
   </header>
   <body>
@@ -72,37 +72,22 @@
         blogs below!
       </b></p>
     </div>
-    <hr size="7" width="550" style="border-radius: 5px;" color="#333333">
+    <hr size="9" width=100% style="border-radius: 5px;" color="#333333">
 
     <!-- Blog Grid -->
     <div class="grid-container">
-      <div class="grid-item">
-        <a href="blogs/Python-Introduction"><img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img"></a>
+      <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'">
+        <img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
         <p><b>
           What is Python?
         </b></p>
       </div>
-      <div class="grid-item">
-        <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
+      <div class="grid-item" onclick="window.location.href='blogs/Desktop-Applications-With-Tkinter'">
+        <img src="blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
         <p><b>
-          A blog about what Python is!
+          Building Desktop Applications With Tkinter
         </b></p>
       </div>
-      <div class="grid-item">
-        <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
-        <p><b>
-          A blog about what Python is!
-        </b></p>
-      </div>
-    </div>
-
-    <!-- Blog Template -->
-    <h2>Python: Into the World of Python</h2>
-    <div class="blog-link">
-      <a href="blogs/Python-Introduction"><img src="icon.png" class="blog-img"></a>
-      <p><b>
-        A blog about what Python is!
-      </b></p>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
