--- a/404.html
+++ b/404.html
@@ -75,7 +75,7 @@
     <div class="container">
         <h1>404 Page Not Found</h1>
         <p>The page you are looking for does not exist.</p>
-        <p>Please check the URL or go to the <a href="/home">homepage</a>.</p>
+        <p>Please check the URL or go to the <a href="https://PyBlog.ddns.net/home">homepage</a>.</p>
     </div>
 </body>
 </html>
