updated home page

--- a/home.html
+++ b/home.html
@@ -68,12 +68,13 @@
     <h2 id="about-pyblog">About PyBlog</h2>
     <div>
       <p><b>
-        PyBlog is a Python Blog Website created by RangerRhino23. There are many different stories and projects you can read about and create!<br> To get started, click on one of the
+        PyBlog is a Python Blog Website created by RangerRhino23 as a fun small programming project. There are many different stories and projects you can read about and create!<br> To get started, click on one of the
         blogs below!
       </b></p>
+      <br>
     </div>
-    <hr size="9" width=100% style="border-radius: 5px;" color="#333333">
-
+    <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
+    <br>
     <!-- Blog Grid -->
     <div class="grid-container">
       <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'">
