--- a/blogs/Python-Introduction.html
+++ b/blogs/Python-Introduction.html
@@ -52,7 +52,7 @@
     <a class="button" href="../home">Back To Home</a>
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
+    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
     <script>
       // Get the button element
       var scrollToTopBtn = document.getElementById("backtotopbtn");
