--- a/home.html
+++ b/home.html
@@ -77,13 +77,13 @@
     <br>
     <!-- Blog Grid -->
     <div class="grid-container">
-      <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'">
+      <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'" style="cursor: pointer;">
         <img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
         <p><b>
           What is Python?
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Desktop-Applications-With-Tkinter'">
+      <div class="grid-item" onclick="window.location.href='blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
         <img src="blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
         <p><b>
           Building Desktop Applications With Tkinter
@@ -94,7 +94,7 @@
 
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
+    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;"">Back to Top</a>
     <script>
       // Get the button element
       var scrollToTopBtn = document.getElementById("backtotopbtn");
