--- a/about-authors.html
+++ b/about-authors.html
@@ -54,7 +54,7 @@
     <br><br><br><br><br>
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
+    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
     <script>
       // Get the button element
       var scrollToTopBtn = document.getElementById("backtotopbtn");
