--- a/home.html
+++ b/home.html
@@ -89,6 +89,12 @@
           Building Desktop Applications With Tkinter
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
+        <img src="blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
+        <p><b>
+          Deeper Exploration of Tkinter
+        </b></p>
+      </div>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
