--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
+        <img src="blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
         <p><b>
           Deeper Exploration of Tkinter
         </b></p>
