--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Home | PyBlog</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9119300254012063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
     <style>
