fixed Deeper exploratoin bug

--- a/blogs/Deeper-Exploration-of-Tkinter.html
+++ b/blogs/Deeper-Exploration-of-Tkinter.html
@@ -82,7 +82,8 @@
         table {
             background-color: #909090;
             border-collapse: collapse;
-            width: 100%;
+            width: auto;
+            display: inline-block;
             margin-top: 20px;
         }
 
@@ -116,7 +117,7 @@
         you would've created a label, a button and a function for the button when clicked.<br>
         In this blog we go over so better functions for placement. 
     </p>
-    <h3>Using .grid</h3>
+    <h2>Using .grid</h2>
     <p>Using grid can allow you to more accuractly place buttons and
         labels. Using the grid function is fairly simple and takes only 2 required args 
         (arguments) which are "column" and "row" which you can infer what they do.
@@ -141,9 +142,9 @@ root.mainloop()
     previous blog but uses a grid system which can make putting buttons and
     labels, like aforementioned, more accuractly
     </p>
-    <h4>
+    <h2>
         Changing Label Text
-    </h4>
+    </h2>
     <p>
         You can change the text on a label using the .config
         function, this can also allow you to change the column and or row
@@ -155,7 +156,7 @@ root.mainloop()
         Here we have modified the "button_click()" function so when the button is clicked
         its changes the text of the label to "You've changed me". 
     </p>
-    <h3>What we've covered:</h3>
+    <h2>What we've covered:</h2>
     <p>
         <table>
             <thead>
