fixed small bugs

--- a/blogs/Introduction-Into-Ursina.html
+++ b/blogs/Introduction-Into-Ursina.html
@@ -10,7 +10,7 @@
         height: auto;
         border-radius: 5px;
         object-fit: cover;
-        scale: 0.75;
+        scale: 0.95;
       }
 
       p {
@@ -91,7 +91,7 @@
   </header>
   <body>
     <br><br>
-    <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset">
+    <img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">
     <h1>Introduction into Ursina!</h1>
     <p>
       If you're looking for an easy-to-use and beginner-friendly game engine, Ursina might be just what you need. Ursina is a Python-based game engine that was created with simplicity 
