--- a/home.html
+++ b/home.html
@@ -97,6 +97,12 @@
           Deeper Exploration of Tkinter
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
+        <img src="blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
+        <p><b>
+          Introduction Into Ursina Engine
+        </b></p>
+      </div>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
