smoll updated to 404 page

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>404 | PyBlog</title>
-    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <link rel="icon" type="image/x-icon" href="icon_rounded.png">
     <style>
       body {
             background-color: #f2f2f2;
