--- a/blogs/Desktop-Applications-With-Tkinter.html
+++ b/blogs/Desktop-Applications-With-Tkinter.html
@@ -48,8 +48,8 @@
 
     <h2>Getting Started with Tkinter</h2>
     <p>
-      To get started with Tkinter, you'll need to make sure that you have Python installed on your computer. You can download Python from the official website: 
-      <a href="https://www.python.org/downloads/" target="_blank">https://www.python.org/downloads/</a>.<br>
+      To get started with Tkinter, you'll need to make sure that you have Python installed on your computer. If you know how to install Python, you can download Python from the official website 
+      <a href="https://www.python.org/downloads/" target="_blank">here</a>or you can follow a step by step guide <a href="Installing-Python">here</a> <br>
 
       Once you have Python installed, you'll need to install Tkinter. Tkinter is included with most Python installations, but if you don't have it installed, you can install it using pip, the Python 
       package manager. To install Tkinter, open a terminal or command prompt and enter the following command: <code>pip install tkinter</code> Once you have Tkinter installed, you're ready to start building your desktop application!
