--- a/blogs/Introduction-Into-Ursina.html
+++ b/blogs/Introduction-Into-Ursina.html
@@ -123,13 +123,13 @@
       After installing Ursina, you can start creating your first game. Ursina offers a range of tutorials and documentation to help you get started. You can find 
       these resources on the official Ursina website <a href="https://www.ursinaengine.org/" target="_blank">here</a>.
     </p>
-
+    
     <h2>Setting up your first project</h2>
     <p>Setting up a new Ursina Project is super easy and quick. Here is a simple step by step guide:<br><br>
       1. Create a folder you want to store the Python file as well as any assets (images, models, etc.) you want to use.<br><br>
       2. Open that folder in an IDE of your choice. Visual Studio code is a very simple easy to use editor for coding.<br><br>
       3. Create a new file. You can name this anything you want just make sure it has ".py" at the end. For this tutorial I am going to put "main.py".
-      (Note: If you havn't install Python yet, you will need to download and install that.)<br><br>
+      (Note: If you havn't install Python yet, you will need to download and install that. You can find a guide <a href="Installing-Python" target="_blank">here</a>)<br><br>
       4. Time to start coding. In that new python file you created put the following code:
     </p>
     <br>
