--- a/home.html
+++ b/home.html
@@ -104,6 +104,19 @@
         </b></p>
       </div>
     </div>
+
+    <br><br><br><br>
+    <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
+    <br>
+    <!-- Helpful Blogs-->
+    <div class="grid-container">
+      <div class="grid-item" onclick="window.location.href='blogs/Installing-Python'" style="cursor: pointer;">
+        <img src="blogs/Python-Introduction-Files/python_logo.png" class="blog-img">
+        <p><b>
+          Installing Python
+        </b></p>
+      </div>
+    </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
   </body>
