--- a/blogs/Deeper-Exploration-of-Tkinter.html
+++ b/blogs/Deeper-Exploration-of-Tkinter.html
@@ -121,7 +121,7 @@
     <p>Using grid can allow you to more accuractly place buttons and
         labels. Using the grid function is fairly simple and takes only 2 required args 
         (arguments) which are "column" and "row" which you can infer what they do.
-        <br><br><pre><code id="code-block" style="color: white;">import tkinter as tk
+        <br><br><pre><code id="code-block-1" style="color: white;">import tkinter as tk
 
 def button_click():
     print("Button clicked!")
@@ -136,7 +136,7 @@ button.grid(column=0,row=1)
 
 root.mainloop()
 
-</code><div class="copy-button" onclick="copyCode()"></div></pre>
+</code><div class="copy-button" onclick="copyCode('code-block-1')"></div></pre>
     </p><p><br>
     this code will do the exact same as the code which is in the
     previous blog but uses a grid system which can make putting buttons and
@@ -149,9 +149,9 @@ root.mainloop()
         You can change the text on a label using the .config
         function, this can also allow you to change the column and or row
         on which the label is placed on
-    </p><br><pre><code id="code-block" style="color: white;">def button_click():
+    </p><br><pre><code id="code-block-2" style="color: white;">def button_click():
     label.config(text="You've changed me!")</code>
-    <div class="copy-button" onclick="copyCode()"></div></pre>
+    <div class="copy-button" onclick="copyCode('code-block-2')"></div></pre>
     <p><br>
         Here we have modified the "button_click()" function so when the button is clicked
         its changes the text of the label to "You've changed me". 
@@ -190,54 +190,73 @@ root.mainloop()
     <br><br><br>
 
 <script>
-const button = document.querySelector('.copy-button');
-
-button.addEventListener('click', () => {
+  function copyCode(elementId) {
+    var codeBlock = document.getElementById(elementId);
+    var range = document.createRange();
+    range.selectNode(codeBlock);
+    window.getSelection().removeAllRanges();
+    window.getSelection().addRange(range);
+    document.execCommand("copy");
+    window.getSelection().removeAllRanges();
+    
+    var button = document.querySelector('[onclick="copyCode(\'' + elementId + '\')"]');
     button.classList.add('clicked');
-    setTimeout(() => {
-    button.classList.remove('clicked');
-    }, 2000); // Reset back to "Copy text" after 2 seconds
-});
-</script>
-<script>
-function copyCode() {
-  var codeBlock = document.getElementById("code-block");
-  var range = document.createRange();
-  range.selectNode(codeBlock);
-  window.getSelection().removeAllRanges();
-  window.getSelection().addRange(range);
-  document.execCommand("copy");
-  window.getSelection().removeAllRanges();
-}
+    setTimeout(function() {
+      button.classList.remove('clicked');
+    }, 2000);
+  }
+  
 </script>
 </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer">Back to Top</a>
     :P
     <script>
-      // Get the button element
-      var scrollToTopBtn = document.getElementById("backtotopbtn");
-  
-      // Show or hide the button based on scroll position
-      window.onscroll = function() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-          scrollToTopBtn.style.display = "block";
-        } else {
-          scrollToTopBtn.style.display = "none";
-        }
-      };
-  
-      // Function to scroll to top with smooth animation
-      function scrollToTop() {
-        var currentPosition = document.documentElement.scrollTop || document.body.scrollTop;
-        if (currentPosition > 0) {
-          window.requestAnimationFrame(scrollToTop);
-          window.scrollTo(0, currentPosition - currentPosition / 20);
-        }
-      }
-  
-      // Add click event listener to the button
-      scrollToTopBtn.addEventListener("click", scrollToTop);
+var scrollToTopBtn = document.getElementById("backtotopbtn");
+
+var isScrolling = false;
+
+var scrollPosition = 0;
+
+window.onscroll = function() {
+  if (isScrolling) {
+    return;
+  }
+
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    scrollToTopBtn.style.display = "block";
+  } else {
+    scrollToTopBtn.style.display = "none";
+  }
+};
+
+function scrollToTop() {
+  if (isScrolling) {
+    return;
+  }
+
+  isScrolling = true;
+  scrollPosition = document.documentElement.scrollTop || document.body.scrollTop;
+
+  scrollToTopAnimation();
+}
+
+function scrollToTopAnimation() {
+  if (scrollPosition > 0) {
+    window.scrollTo(0, scrollPosition - scrollPosition / 20);
+    scrollPosition = document.documentElement.scrollTop || document.body.scrollTop;
+    if (scrollPosition > 0) {
+      window.requestAnimationFrame(scrollToTopAnimation);
+    } else {
+      isScrolling = false;
+    }
+  } else {
+    isScrolling = false;
+  }
+}
+
+scrollToTopBtn.addEventListener("click", scrollToTop);
+
     </script>
   </footer>
 </html>
