more fixes & changes

--- a/blogs/Deeper-Exploration-of-Tkinter.html
+++ b/blogs/Deeper-Exploration-of-Tkinter.html
@@ -71,7 +71,7 @@
             white-space: nowrap;
         }
         .copy-button.clicked:before {
-            content: "Copied text";
+            content: "Copied code";
             font-family: Arial, sans-serif;
             font-size: 12px;
             color: #fff;
