--- a/blogs/Introduction-Into-Ursina.html
+++ b/blogs/Introduction-Into-Ursina.html
@@ -73,7 +73,7 @@
             white-space: nowrap;
         }
         .copy-button.clicked:before {
-            content: "Copied text";
+            content: "Copied code";
             font-family: Arial, sans-serif;
             font-size: 12px;
             color: #fff;
@@ -116,8 +116,8 @@
       To get started with Ursina, you'll need to have Python installed on your computer. Once you have Python installed, you can download and install Ursina by running the following command:
     </p>
     <br>
-    <pre><code id="code-block" style="color: white;">pip install ursina
-    </code><div class="copy-button" onclick="copyCode()"></div></pre>
+    <pre><code id="code-block-1" style="color: white;">pip install ursina
+    </code><div class="copy-button" onclick="copyCode('code-block-1')"></div></pre>
     <br><br>
     <p>
       After installing Ursina, you can start creating your first game. Ursina offers a range of tutorials and documentation to help you get started. You can find 
@@ -133,14 +133,14 @@
       4. Time to start coding. In that new python file you created put the following code:
     </p>
     <br>
-    <pre><code id="code-block" style="color: white;">from ursina import *
+    <pre><code id="code-block-2" style="color: white;">from ursina import *
 
 app = Ursina()
 
 circle = Entity(model='circle', color=color.red)
 
 app.run()
-    </code><div class="copy-button" onclick="copyCode()"></div></pre>
+    </code><div class="copy-button" onclick="copyCode('code-block-2')"></div></pre>
     <br><br><br>
     <p>5. Run the python file! You can do this by clicking a run button in your IDE or by running it through your terminal. To run it from a terminal, open up file explorer and find the folder
       you put your python file. Double click on the file and if you installed Python correctly, it should open a window with a red circle on it!
@@ -158,9 +158,27 @@ app.run()
     <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
     <br><br><br>
     <a class="button" href="../home">Back To Home</a>
+<script>
+  function copyCode(elementId) {
+    var codeBlock = document.getElementById(elementId);
+    var range = document.createRange();
+    range.selectNode(codeBlock);
+    window.getSelection().removeAllRanges();
+    window.getSelection().addRange(range);
+    document.execCommand("copy");
+    window.getSelection().removeAllRanges();
+    
+    var button = document.querySelector('[onclick="copyCode(\'' + elementId + '\')"]');
+    button.classList.add('clicked');
+    setTimeout(function() {
+      button.classList.remove('clicked');
+    }, 2000);
+  }
+  
+</script>
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
-    <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
+    <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer">Back to Top</a>
     <script>
       var scrollToTopBtn = document.getElementById("backtotopbtn");
 
