added chatbot blog to home screen and updated home

--- a/home.html
+++ b/home.html
@@ -59,6 +59,8 @@
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
       <li><a href="#">Home</a></li>
       <li><a href="#about-pyblog">About PyBlog</a></li>
+      <li><a href="#fun-blogs">Fun Blogs</a></li>
+      <li><a href="#helpful-blogs">Helpful Blogs</a></li>
       <li><a href="about-authors">Authors</a></li>
   </ul>
   </header>
@@ -75,9 +77,11 @@
       </b></p>
       <br>
     </div>
+
+    <h2 id="fun-blogs">Fun Blogs</h2>
     <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
     <br>
-    <!-- Blog Grid -->
+    <!-- Fun Blogs -->
     <div class="grid-container">
       <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'" style="cursor: pointer;">
         <img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
@@ -103,9 +107,16 @@
           Introduction Into Ursina Engine
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
+        <img src="blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
+        <p><b>
+          Making a Chatbot With Python
+        </b></p>
+      </div>
     </div>
 
     <br><br><br><br>
+    <h2 id="helpful-blogs">Helpful Blogs</h2>
     <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
     <br>
     <!-- Helpful Blogs-->
