--- a/blogs/Python-Introduction.html
+++ b/blogs/Python-Introduction.html
@@ -53,7 +53,7 @@
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
-    <script src="Scroll.js">
+    <script src="../Scroll.js">
     </script>
   </footer>
 </html>
