--- a/blogs/Deeper-Exploration-of-Tkinter.html
+++ b/blogs/Deeper-Exploration-of-Tkinter.html
@@ -211,7 +211,7 @@ root.mainloop()
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer">Back to Top</a>
     :P
-    <script src="Scroll.js">
+    <script src="../Scroll.js">
     </script>
   </footer>
 </html>
