--- a/blogs/Desktop-Applications-With-Tkinter.html
+++ b/blogs/Desktop-Applications-With-Tkinter.html
@@ -121,7 +121,7 @@
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
-    <script src="Scroll.js">
+    <script src="../Scroll.js">
     </script>
   </footer>
 </html>
