--- a/blogs/Introduction-Into-Ursina.html
+++ b/blogs/Introduction-Into-Ursina.html
@@ -179,7 +179,7 @@ app.run()
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer">Back to Top</a>
-    <script src="Scroll.js">
+    <script src="../Scroll.js">
     </script>
   </footer>
 </html>
