--- a/blogs/Making-a-Chatbot-With-Python.html
+++ b/blogs/Making-a-Chatbot-With-Python.html
@@ -211,7 +211,7 @@ while True:
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer;">Back to Top</a>
-    <script src="Scroll.js">
+    <script src="../Scroll.js">
     </script>
     <!DOCTYPE html>
     <html>
