dont remove test.py or test.html very important!

--- a/blogs/Creating-a-Website-With-Flask.html
+++ b/blogs/Creating-a-Website-With-Flask.html
@@ -146,8 +146,21 @@ app.run('localhost', 5000)
     <br><br>
     <p>If you did everything correctly, the webpage should look like this!</p><br>
     <img src="Flask-stuff/first-website-result.png" class="img-preset">
-
-
+    <br>
+    <p>
+      Now you're thinking, how do you create proper websites with it because just adding
+      text surely is that great. And you'd be right it isnt that great so to compensate flask allows
+      you to use html files to display the website which is also why its known as a server sided module
+      which means you can also use PHP and other server sided stuff.
+    </p>
+    <h2>Creating a HTML file</h2>
+    <p>
+      You can create a html file and call it whatever you'd like. In this blog we will be calling it:
+      "test.html"
+    </p>
+  <br>
+  <pre><code id="code-block-3" style="color: white;">This is HTML
+  </code><div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
     <br><br><br>
     <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
     with the help of <a href="../authors/RangerRhino23">RangerRhino23</a>
