updated menu bar

--- a/about-authors.html
+++ b/about-authors.html
@@ -22,10 +22,10 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img id="enter-hunt" style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
-      <li><a href="home">Home</a></li>
-      <li><a href="#rangerrhino23">RangerRhino23</a></li>
-      <li><a href="#itsbailey">ItsBailey</a></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
+      <li><a href="home" class="hover-underline-animation">Home</a></li>
+      <li><a href="#rangerrhino23" class="hover-underline-animation">RangerRhino23</a></li>
+      <li><a href="#itsbailey" class="hover-underline-animation">ItsBailey</a></li>
   </ul>
   </header>
   <body>
