--- a/home.html
+++ b/home.html
@@ -75,11 +75,11 @@
   <header>
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
-      <li><a href="#">Home</a></li>
-      <li><a href="#about-pyblog">About PyBlog</a></li>
-      <li><a href="#fun-blogs">Fun Blogs</a></li>
-      <li><a href="#helpful-blogs">Helpful Blogs</a></li>
-      <li><a href="about-authors">Authors</a></li>
+      <li><a href="#" class="hover-underline-animation">Home</a></li>
+      <li><a href="#about-pyblog" class="hover-underline-animation">About PyBlog</a></li>
+      <li><a href="#fun-blogs" class="hover-underline-animation">Fun Blogs</a></li>
+      <li><a href="#helpful-blogs" class="hover-underline-animation">Helpful Blogs</a></li>
+      <li><a href="about-authors" class="hover-underline-animation">Authors</a></li>
   </ul>
   </header>
   <body>
