--- a/blogs/Making-a-Chatbot-With-Python.html
+++ b/blogs/Making-a-Chatbot-With-Python.html
@@ -108,8 +108,8 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img id="enter-hunt" style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-      <li><a href="../home">Home</a></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
+      <li><a href="../home" class="hover-underline-animation">Home</a></li>
   </ul>
   </header>
   <body>
