--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <header>
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="#" class="hover-underline-animation">Home</a></li>
   </ul>
   </header>
   <body>
