--- a/404.html
+++ b/404.html
@@ -109,8 +109,7 @@
   <ul class="menu">
     <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
     <li><a href="home" class="hover-underline-animation">Home</a></li>
-    <li><a href="portfolio" class="hover-underline-animation">Portfolio</a></li>
-    <li><a href="games" class="hover-underline-animation">Games</a></li>
+    <li><a href="about-authors" class="hover-underline-animation">Authors</a></li>
 </ul>
 </header>
 <body>
