--- a/404.html
+++ b/404.html
@@ -108,8 +108,8 @@
 <header>
   <ul class="menu">
     <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-    <li><a href="home" class="hover-underline-animation">Home</a></li>
-    <li><a href="about-authors" class="hover-underline-animation">Authors</a></li>
+    <li><a href="/home" class="hover-underline-animation">Home</a></li>
+    <li><a href="/about-authors" class="hover-underline-animation">Authors</a></li>
 </ul>
 </header>
 <body>
