--- a/Home.html
+++ b/Home.html
@@ -101,38 +101,38 @@
     <br>
     <!-- Fun Blogs -->
     <div class="grid-container">
-      <div class="grid-item" onclick="window.location.href='blogs/Python-Introduction'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
         <p><b>
           What is Python?
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
         <p><b>
           Building Desktop Applications With Tkinter
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
         <p><b>
           Deeper Exploration of Tkinter
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
         <p><b>
           Introduction Into Ursina Engine
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
-        <img src="blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
         <p><b>
           Making a Chatbot With Python
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
-        <img src="blogs/Flask-stuff/Flask.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
+        <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
         <p><b>
           Making a website with flask
         </b></p>
@@ -140,13 +140,13 @@
     </div>
 
     <br><br><br><br>
-    <h2 id="helpful-blogs">Helpful Blogs</h2>
+    <h2 id="helpful-Blogs">Helpful Blogs</h2>
     <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
     <br>
     <!-- Helpful Blogs-->
     <div class="grid-container">
-      <div class="grid-item" onclick="window.location.href='blogs/Installing-Python'" style="cursor: pointer;">
-        <img src="blogs/Python-Introduction-Files/python_logo.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python'" style="cursor: pointer;">
+        <img src="Blogs/Python-Introduction-Files/python_logo.png" class="blog-img">
         <p><b>
           Installing Python
         </b></p>
