--- a/Home.html
+++ b/Home.html
@@ -79,7 +79,7 @@
       <li><a href="#about-pyblog" class="hover-underline-animation">About PyBlog</a></li>
       <li><a href="#fun-blogs" class="hover-underline-animation">Fun Blogs</a></li>
       <li><a href="#helpful-blogs" class="hover-underline-animation">Helpful Blogs</a></li>
-      <li><a href="about-authors" class="hover-underline-animation">Authors</a></li>
+      <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
   </ul>
   </header>
   <body>
