started tests on cool thang

--- a/Home.html
+++ b/Home.html
@@ -78,7 +78,7 @@
       <li><a href="#" class="hover-underline-animation">Home</a></li>
       <li><a href="#about-pyblog" class="hover-underline-animation">About PyBlog</a></li>
       <li><a href="#fun-blogs" class="hover-underline-animation">Fun Blogs</a></li>
-      <li><a href="#helpful-blogs" class="hover-underline-animation">Helpful Blogs</a></li>
+      <li><a href="#helpful-Blogs" class="hover-underline-animation">Helpful Blogs</a></li>
       <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
   </ul>
   </header>
@@ -197,6 +197,8 @@
       });
       </script>
 --> 
-      
+  <script>
+    
+  </script>
   </footer>
 </html>
