--- a/Home.html
+++ b/Home.html
@@ -100,7 +100,7 @@
     <hr size="15" width=100% style="border-radius: 5px;" color="#333333">
     <br>
     <!-- Fun Blogs -->
-    <div class="grid-container">
+    <div class="grid-container" id="gridContainer1" style = "display: grid;">
       <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'" style="cursor: pointer;">
         <img src="Blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
         <p><b>
@@ -137,7 +137,28 @@
           Making a website with flask
         </b></p>
       </div>
-    </div>
+    </div><br>
+    <div class="grid-container" id="gridContainer2" style="display: none;">
+      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-1'" style="cursor: pointer;">
+        <img src="sad.png" class="blog-img">
+        <p><b>
+          Blog doesn't exist yet
+        </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+       <img src="sad.png" class="blog-img">
+       <p><b>
+        Blog doesn't exist yet
+       </b></p>
+     </div>
+     <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
+       <img src="sad.png" class="blog-img">
+       <p><b>
+         Blog doesn't exist yet
+       </b></p>
+     </div>
+    </div><br>
+    <button onclick="toggleElements()">&gt;</button>
 
     <br><br><br><br>
     <h2 id="helpful-Blogs">Helpful Blogs</h2>
@@ -182,6 +203,17 @@
       gridItems.forEach((item) => {
         itemObserver.observe(item);
       });
+      function toggleElements() {
+  var gridContainer = document.getElementById('gridContainer1'); // Get the grid-container
+  var gridContainer2 = document.getElementById('gridContainer2'); // Get the second grid-container
+  if (gridContainer.style.display != 'none') {
+   gridContainer.style.display = 'none';
+   gridContainer2.style.display = 'grid';
+  } else {
+   gridContainer.style.display = 'grid';
+   gridContainer2.style.display = 'none';
+  }
+}
     </script>
     
 <!--
