--- a/Home.html
+++ b/Home.html
@@ -82,6 +82,7 @@
       <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
   </ul>
   </header>
+
   <body>
     <br><br><br>
     <img src="icon.png" class="img-preset"/>
@@ -158,7 +159,7 @@
        </b></p>
      </div>
     </div><br>
-    <button onclick="toggleElements()">&gt;</button>
+    <button onclick="toggleElements()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px;">&gt;</button>
 
     <br><br><br><br>
     <h2 id="helpful-Blogs">Helpful Blogs</h2>
