--- a/404.html
+++ b/404.html
@@ -106,15 +106,15 @@
 <header>
   <ul class="menu">
     <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-    <li><a href="/home" class="hover-underline-animation">Home</a></li>
-    <li><a href="/about-authors" class="hover-underline-animation">Authors</a></li>
+    <li><a href="/Home" class="hover-underline-animation">Home</a></li>
+    <li><a href="/About-Authors" class="hover-underline-animation">Authors</a></li>
 </ul>
 </header>
 <body>
     <div class="container">
         <h1>404 Page Not Found</h1>
         <p>The page you are looking for does not exist.</p>
-        <p>Please check the URL or go to the <a href="https://PyBlog.ddns.net/home">homepage</a>.</p>
+        <p>Please check the URL or go to the <a href="https://PyBlog.ddns.net/Home">homepage</a>.</p>
     </div>
 </body>
 </html>
