--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
          background-color: #444;
          }
     </style>
-    <meta http-equiv = "refresh" content = ".001; url = /home">
+    <meta http-equiv = "refresh" content = ".001; url = /Home">
   </head>
   <header>
     <ul class="menu">
@@ -94,6 +94,6 @@
   </header>
   <body>
    <p>Redirecting to main page</p>
-   <p>If it doesn't automatically redirect,<br><br> <a class="button" href="/home">Click here</a>
+   <p>If it doesn't automatically redirect,<br><br> <a class="button" href="/Home">Click here</a>
   </body>
 </html>
