--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -105,15 +105,15 @@
   <header>
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-      <li><a href="../home" class="hover-underline-animation">Home</a></li>
-      <li><a href="../blogs/Desktop-Applications-With-Tkinter.html" class="hover-underline-animation">Previous blog</a></li>
+      <li><a href="../Home" class="hover-underline-animation">Home</a></li>
+      <li><a href="../Blogs/Desktop-Applications-With-Tkinter.html" class="hover-underline-animation">Previous blog</a></li>
   </ul>
   </header>
   <body>
     <h1>A Deeper Exploration of Tkinter</h1>
     <h2>Quick recap.</h2>
     <p>
-        From what we saw in <a href="../blogs/Desktop-Applications-With-Tkinter.html">this blog</a>
+        From what we saw in <a href="../Blogs/Desktop-Applications-With-Tkinter.html">this blog</a>
         you would've created a label, a button and a function for the button when clicked.<br>
         In this blog we go over so better functions for placement. 
     </p>
