--- a/Blogs/Desktop-Applications-With-Tkinter.html
+++ b/Blogs/Desktop-Applications-With-Tkinter.html
@@ -34,7 +34,7 @@
   <header>
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-      <li><a href="../home" class="hover-underline-animation">Home</a></li>
+      <li><a href="../Home" class="hover-underline-animation">Home</a></li>
   </ul>
   </header>
   <body>
@@ -117,7 +117,7 @@
     <br>
     <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
     <br><br><br>
-    <a class="button" href="../home">Back To Home</a>
+    <a class="button" href="../Home">Back To Home</a>
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white">Back to Top</a>
