just some fixes

--- a/404.html
+++ b/404.html
@@ -68,6 +68,7 @@
         '/blogs',
         '/blogs/creating-a-website-with-flask',
         '/authors/itsbailey',
+        '/authors/',
         '/authors/rangerrhino23',
         '/blogs/deeper-exploration-of-tkinter',
         '/blogs/desktop-applications-with-tkinter',
@@ -81,6 +82,7 @@
         '/Home',
         '/Blogs',
         '/Blogs/Creating-A-Website-With-Flask',
+        '/Authors/',
         '/Authors/ItsBailey',
         '/Authors/RangerRhino23',
         '/Blogs/Deeper-Exploration-of-Tkinter',
